// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 eKLzHn"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-fukmjx-2 dwUGUd"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 hnszmP"
    >
      +
    </span>
    Organisaatio 1
  </button>
</div>
`;

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 eKLzHn"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-fukmjx-2 jWQrTi"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 hnszmP"
    >
      -
    </span>
    Organisaatio 1
  </button>
  <div
    class="Expander__ExpandedContents-fukmjx-3 gduRyI"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 hlBkBn"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 ddnJDd"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 dzvMvW"
        >
          Tietojen käyttölupa:
        </b>
         Lakiin perustuva tiedonkäyttölupa.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 fmWNUD"
        href="https://opintopolku.fi/wp/fi/tietosuojaseloste/"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 koGofQ"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 dzvMvW"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-ufvf4x-0 dOiQIu"
    >
      <div
        class="LogEntries__TopRow-ufvf4x-1 fFHNFn"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-r8zxw8-0 fWStGH"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 eKLzHn"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-fukmjx-2 dwUGUd"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 hnszmP"
    >
      +
    </span>
    Organisaatio 2
  </button>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-fukmjx-0 eKLzHn"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-fukmjx-2 jWQrTi"
  >
    <span
      aria-hidden="true"
      class="Expander__ExpanderPrefix-fukmjx-1 hnszmP"
    >
      -
    </span>
    Organisaatio 2
  </button>
  <div
    class="Expander__ExpandedContents-fukmjx-3 gduRyI"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 hlBkBn"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 ddnJDd"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 dzvMvW"
        >
          Tietojen käyttölupa:
        </b>
         Olet antanut tälle palvelutarjoajalle luvan käyttää tietojasi.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 fmWNUD"
        href="https://confluence.csc.fi/pages/viewpage.action?pageId=76536741"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 koGofQ"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 dzvMvW"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-ufvf4x-0 dOiQIu"
    >
      <div
        class="LogEntries__TopRow-ufvf4x-1 fFHNFn"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-r8zxw8-0 fWStGH"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;
